Hopefully overflow problem fixed:
Overflow was the problem of the header, resized the figure slider width
to 325px, had therefor to reajust the eyes, made it now so that it is margin
left and right auto so it will be in the middle of the head of the figure
and in the middle of the page.

--- a/src/Header.scss
+++ b/src/Header.scss
@@ -1,10 +1,10 @@
 @import "./index.scss";
 
 .Header {
-  padding: 1rem;
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
+  width: calc(100vw - 2rem);
 
   .hii, .value {
     text-align: center;
@@ -22,7 +22,7 @@
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
-    width: 340px;
+    width: 325px;
     height: 318px;
     margin: 0px auto;
 
@@ -40,9 +40,10 @@
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
-    width: calc(100% - 2rem);
+    width: auto;
     position: relative;
     bottom: 260px;
+    margin: 0px auto;
 
     span {
       display: block;
@@ -54,7 +55,7 @@
       animation-delay: 2s;
     }
     span:first-of-type {
-      margin: 0px 1rem 0px 1.5rem;
+      margin: 0px 1rem 0px -0.5rem;
     }
   }
 
