--- a/src/Home.scss
+++ b/src/Home.scss
@@ -3,6 +3,6 @@
 .App {
   display: flex;
   flex-flow: column wrap;
-  width: 100%;
+  width: 100vw;
   background-color: $grey;
 }
